[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory_services"
version = "1.0.0"
description = "Складская система с pub/sub"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "aioredis>=2.0.0",
    "asyncpg>=0.27.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=2.0.0",
    "alembic>=1.8.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "uvicorn>=0.24.0"
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[project.scripts]
inventory-api = "inventory_api.app:main"
analytics-worker = "analytics_worker.worker:main"

[tool.setuptools.packages.find]
include = ["inventory_api*", "analytics_worker*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"